--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <button class="font-menu" mat-menu-item>ทานเล่น</button>
       <button class="font-menu" mat-menu-item>ของหวาน</button>
     </mat-menu>
-    <button mat-button>ติดต่อmo</button>
+    <button mat-button>ติดต่อ</button>
   </div>
 </mat-toolbar>
 <div class="fxLayout" style="flex-direction: row; justify-content: center">
