--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,5 +75,31 @@
           />
         </button>
     </div>
+    <div class="col-6">
+      <div
+        class="fxLayout"
+        style="flex-direction: row; justify-content: center"
+      >
+        <img
+          class="img-list-menu"
+          style="margin-bottom: 20px"
+          src="https://pbs.twimg.com/media/DZWu1fIXkAEFAQ9.jpg:large"
+          alt="menu"
+        />
+        <p class="overlay"> <span class="font-name"> กะเพราหมูสับไข่ดาว <br>
+          ราคา: 45 บาท <br>
+          รสชาติตามใจเชฟ
+        </span>
+        </p>
+      </div>
+      <p style="margin-left: 260px" class="font-name">
+        กะเพราหมูสับไข่ดาว
+        <button mat-button style="float: right; margin-right: 240px">
+          <img
+            class="img-trolley"
+            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
+          />
+        </button>
+    </div>
   </div>
 </div>
