--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,105 +1,2 @@
-<mat-toolbar class="app-bar">
-  <img
-    class="img-logo"
-    src="https://cdn-icons-png.flaticon.com/512/3183/3183463.png"
-    alt="icon"
-  />
-  <span class="font-logo">ตามสั่งตามใจ</span>
-  <span class="space"></span>
-  <div class="font-menu">
-    <button mat-button>หน้าแรก</button>
-    <button mat-button [matMenuTriggerFor]="menu">เมนู</button>
-    <mat-menu #menu="matMenu">
-      <button class="font-menu" mat-menu-item>จานเดียว</button>
-      <button class="font-menu" mat-menu-item>กับข้าว</button>
-      <button class="font-menu" mat-menu-item>ทานเล่น</button>
-      <button class="font-menu" mat-menu-item>ของหวาน</button>
-    </mat-menu>
-    <button mat-button>ติดต่อ</button>
-  </div>
-</mat-toolbar>
-<div class="fxLayout" style="flex-direction: row; justify-content: center">
-  <span class="font-menu" style="font-size: 50px">เมนู</span>
-</div>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6">
-      <div
-        class="fxLayout"
-        style="flex-direction: row; justify-content: center"
-      >
-        <img
-          class="img-list-menu"
-          style="margin-bottom: 20px"
-          src="https://www.ajinomoto.co.th//storage/photos/shares/our-story/tips/friedrice/62ff47ff5a301.jpg"
-          alt="menu"
-        />
-        <p class="overlay">ข้าวผัด <br>
-          ราคา: 45 บาท <br>
-          รสชาติตามใจเชฟ
-        </p>
-      </div>
-      <p style="margin-left: 260px" class="font-name">
-        ข้าวผัด
-        <button mat-button style="float: right; margin-right: 240px">
-          <img
-            class="img-trolley"
-            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
-          />
-        </button>
-      </p>
-    </div>
-    <div class="col-6">
-      <div
-        class="fxLayout"
-        style="flex-direction: row; justify-content: center"
-      >
-        <img
-          class="img-list-menu"
-          style="margin-bottom: 20px"
-          src="https://pbs.twimg.com/media/DZWu1fIXkAEFAQ9.jpg:large"
-          alt="menu"
-        />
-        <p class="overlay"> <span class="font-name"> กะเพราหมูสับไข่ดาว <br>
-          ราคา: 45 บาท <br>
-          รสชาติตามใจเชฟ
-        </span>
-        </p>
-      </div>
-      <p style="margin-left: 260px" class="font-name">
-        กะเพราหมูสับไข่ดาว
-        <button mat-button style="float: right; margin-right: 240px">
-          <img
-            class="img-trolley"
-            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
-          />
-        </button>
-    </div>
-    <div class="col-6">
-      <div
-        class="fxLayout"
-        style="flex-direction: row; justify-content: center"
-      >
-        <img
-          class="img-list-menu"
-          style="margin-bottom: 20px"
-          src="https://pbs.twimg.com/media/DZWu1fIXkAEFAQ9.jpg:large"
-          alt="menu"
-        />
-        <p class="overlay"> <span class="font-name"> กะเพราหมูสับไข่ดาว <br>
-          ราคา: 45 บาท <br>
-          รสชาติตามใจเชฟ
-        </span>
-        </p>
-      </div>
-      <p style="margin-left: 260px" class="font-name">
-        กะเพราหมูสับไข่ดาว
-        <button mat-button style="float: right; margin-right: 240px">
-          <img
-            class="img-trolley"
-            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
-          />
-        </button>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+<app-main></app-main>
