select menu and edit Ui

--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -8,13 +8,7 @@
   <span class="space"></span>
   <div class="font-menu">
     <button mat-button>หน้าแรก</button>
-    <button mat-button [matMenuTriggerFor]="menu">เมนู</button>
-    <mat-menu #menu="matMenu">
-      <button class="font-menu" mat-menu-item>จานเดียว</button>
-      <button class="font-menu" mat-menu-item>กับข้าว</button>
-      <button class="font-menu" mat-menu-item>ทานเล่น</button>
-      <button class="font-menu" mat-menu-item>ของหวาน</button>
-    </mat-menu>
     <button mat-button>ติดต่อ</button>
+    <button mat-button><img class="img-trolley" src="https://cdn-icons-png.flaticon.com/512/2838/2838895.png" ></button>
   </div>
 </mat-toolbar>
