--- a/src/app/page/header/header.component.scss
+++ b/src/app/page/header/header.component.scss
@@ -5,6 +5,9 @@
 }
 
 .app-bar{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   background-color: rgb(249, 181, 55);
 }
 
@@ -64,4 +67,5 @@
 .overlay:hover{
   opacity: 1;
 }
+
 
