--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,87 +1,88 @@
-<div class="fxLayout" style="flex-direction: row; justify-content: center">
-  <span class="font-menu" style="font-size: 50px">เมนู</span>
-</div>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-6">
-      <div
-        class="fxLayout"
-        style="flex-direction: row; justify-content: center"
-      >
-        <img
-          class="img-list-menu"
-          style="margin-bottom: 20px"
-          src="https://www.ajinomoto.co.th//storage/photos/shares/our-story/tips/friedrice/62ff47ff5a301.jpg"
-          alt="menu"
-        />
-        <p class="overlay"><span class="font-name"> ข้าวผัด <br>
-          ราคา: 45 บาท <br>
-          รสชาติตามใจเชฟ
-        </span>
-        </p>
-      </div>
-      <p style="margin-left: 260px" class="font-name">
-        ข้าวผัด
-        <button mat-button style="float: right; margin-right: 240px">
-          <img
-            class="img-trolley"
-            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
-          />
-        </button>
-      </p>
-    </div>
     <div class="col-6">
-      <div
-        class="fxLayout"
-        style="flex-direction: row; justify-content: center"
-      >
+      <div style="display: flex; flex-direction: row; justify-content: center">
         <img
-          class="img-list-menu"
-          style="margin-bottom: 20px"
-          src="https://pbs.twimg.com/media/DZWu1fIXkAEFAQ9.jpg:large"
-          alt="menu"
+          class="img-cover"
+          src="https://s.isanook.com/wo/0/rp/rc/w670h402/yatxacm1w0/aHR0cHM6Ly9zLmlzYW5vb2suY29tL3dvLzAvdWQvMzYvMTgwNjkzL2Zvb2QuanBn.jpg"
         />
-        <p class="overlay"> <span class="font-name"> กะเพราหมูสับไข่ดาว <br>
-          ราคา: 45 บาท <br>
-          รสชาติตามใจเชฟ
-        </span>
-        </p>
+        <span class="font-cover">ตามสั่งตามใจ</span>
       </div>
-      <p style="margin-left: 260px" class="font-name">
-        กะเพราหมูสับไข่ดาว
-        <button mat-button style="float: right; margin-right: 240px">
-          <img
-            class="img-trolley"
-            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
-          />
+      <div class="col-12" style="margin: 20px">
+        <mat-toolbar
+          style="display: flex; flex-direction: row; justify-content: center;background-color: white;"
+          >
+          <span class="font-menu2">เลือกประเภทอาหาร</span>
+          <button mat-button color="warn" class="font-menu2" *ngFor="let type of this.foodtypes" (click)="SearchType(type.name)">
+            {{ this.type.name }}
+          </button></mat-toolbar
+        >
+        <button
+          mat-button
+          class="button-size"
+          *ngFor="let food of this.foods"
+          (click)="show(this.food.fid)"
+        >
+          <img class="img-menu" src="{{ this.food.img }}" />
+          <span class="font-menu2" style="float: left">{{
+            this.food.name
+          }}</span>
+          <span class="font-menu2" style="float: right">บาท</span>
+          <span class="font-menu2" style="float: right">{{
+            this.food.price
+          }}</span>
         </button>
+      </div>
     </div>
-    <div class="col-6">
-      <div
-        class="fxLayout"
-        style="flex-direction: row; justify-content: center"
-      >
-        <img
-          class="img-list-menu"
-          style="margin-bottom: 20px"
-          src="https://images.deliveryhero.io/image/foodpanda/recipes/pad-thai.jpg"
-          alt="menu"
-        />
-        <p class="overlay"> <span class="font-name"> ผัดไทย <br>
-          ราคา: 45 บาท <br>
-          รสชาติตามใจเชฟ
-        </span>
-        </p>
+
+    <!-- Shiba -->
+    <div class="col-6" style="margin-top: 10px">
+      <div style="display: flex; flex-direction: row; justify-content: center">
+        <div *ngIf="SelectFood != undefined">
+          <img class="img-show" src="{{ this.SelectFood.img }}" />
+          <span
+            ><h1 class="font-menu2">{{ this.SelectFood.name }}</h1></span
+          >
+          <span
+            ><p class="font-menu2">
+              รายละเอียด :{{ this.SelectFood.detail }}
+            </p></span
+          >
+          <span
+            ><p class="font-menu2">
+              ราคา {{ this.SelectFood.price }} บาท
+            </p></span
+          >
+          <span
+            style="
+              display: flex;
+              justify-content: center;
+              font-size: 50px;
+              margin-top: 20px;
+            "
+            >{{ this.sum }}</span
+          >
+          <span
+            #num
+            style="
+              display: flex;
+              justify-content: space-around;
+              font-size: 30px;
+              margin-bottom: 10px;
+            "
+            ><button mat-button color="warn" (click)="delete()">-</button>
+            <button mat-button color="primary" (click)="plus()">+</button>
+          </span>
+          <button
+            mat-raised-button
+            color="accent"
+            class="font-menu2"
+            style="width: 100%"
+          >
+            เพิ่มลงในตะกร้า
+          </button>
+        </div>
       </div>
-      <p style="margin-left: 260px" class="font-name">
-        ผัดไทย
-        <button mat-button style="float: right; margin-right: 240px">
-          <img
-            class="img-trolley"
-            src="https://cdn-icons-png.flaticon.com/512/5962/5962078.png"
-          />
-        </button>
     </div>
   </div>
 </div>
-
