--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -17,6 +17,7 @@
             {{ this.type.name }}
           </button></mat-toolbar
         >
+        <!-- *ngIf="this.isMultiple == 'show-one'" -->
         <button
           mat-button
           class="button-size"
