--- a/src/app/page/order/order.component.html
+++ b/src/app/page/order/order.component.html
@@ -13,7 +13,7 @@
           <span>{{order.amount}}</span>
         </div>
       </div>
-      <button class="bt-order" mat-raised-button color="primary">{{order.status}}</button>
+      <button class="bt-order" mat-raised-button color="warn"><span style="font-size: 15px;">{{order.status}}</span></button>
     </div>
 
   </mat-card>
