--- a/src/app/page/order/order.component.html
+++ b/src/app/page/order/order.component.html
@@ -15,6 +15,6 @@
       </div>
       <button class="bt-order" mat-raised-button color="warn"><span style="font-size: 15px;">{{order.status}}</span></button>
     </div>
-
+    <div></div>
   </mat-card>
 </div>
