--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -7,9 +7,8 @@
   <span class="font-logo">ตามสั่งตามใจ</span>
   <span class="space"></span>
   <div class="font-menu">
-    <button mat-button  routerLink="/order">Owner</button>
-    <button mat-button  routerLink="/main">main</button>
-    <button mat-button>หน้าแรก</button>
+    <button mat-button routerLink="/order">เจ้าของ</button>
+    <button mat-button routerLink="/main" >หน้าแรก</button>
     <button mat-button>ติดต่อ</button>
     <button mat-button><img class="img-trolley" src="https://cdn-icons-png.flaticon.com/512/2838/2838895.png" ></button>
   </div>
