--- a/src/app/page/order/order.component.html
+++ b/src/app/page/order/order.component.html
@@ -1,4 +1,76 @@
-<div *ngFor="let order of this.orders">
+<div class="container" style="margin-left:50px; font-family: 'Mitr', sans-serif;">
+  <div class="row" >
+    <div class="col-6">
+
+      <mat-card style="margin-top: 20px; background-color:rgb(249, 181, 55) ;">
+        <div class="row" style="margin-top: 5px;margin-bottom: 5px;">
+          <div class="col-2" style="text-align: center;">
+            <span>ออเดอร์</span>
+          </div>
+          <div class="col-5">
+            <span>ชื่อลูกค้า</span>
+          </div>
+          <div class="col-2">
+            <span>รายละเอียด</span>
+          </div>
+          <div class="col-3">
+            <span>การจัดการ</span>
+          </div>
+        </div>
+      </mat-card>
+
+      <mat-card style="margin-top: 10px;" *ngFor="let order of this.orders">
+        <div class="row" style="margin-top: 10px;margin-bottom: 10px;">
+          <div class="col-2" style="text-align: center;">
+            <span>{{order.oid}}</span>
+          </div>
+          <div class="col-5">
+            <span>{{order.cusName}}</span>
+          </div>
+          <div class="col-2">
+            <button mat-raised-button (click)="show(this.order.oid)">ข้อมูล</button>
+          </div>
+          <div class="col-3">
+            <button mat-raised-button>{{order.status}}</button>
+          </div>
+        </div>
+      </mat-card>
+    </div>
+
+    <div class="col-1"></div>
+    <!-- show detail -->
+    <div class="col-5">
+      <div style="display: flex; flex-direction: row; justify-content: center">
+        <img class="img-cover"
+          src="https://s.isanook.com/wo/0/rp/rc/w670h402/yatxacm1w0/aHR0cHM6Ly9zLmlzYW5vb2suY29tL3dvLzAvdWQvMzYvMTgwNjkzL2Zvb2QuanBn.jpg" />
+        <span class="font-cover">ตามสั่งตามใจ</span>
+      </div>
+      <div style="display: flex; flex-direction: column;margin-top: 10px">
+        <span>
+          <h4 class="font-menu2">รายละเอียด</h4>
+        </span>
+
+        <div class="row" *ngFor="let foodOrder of this.foodOrders">
+          <div class="col-8">
+            <span>
+              <p class="font-menu2">{{foodOrder.name}}</p>
+            </span>
+          </div>
+          <div class="col-3">
+            <span>
+              <p class="font-menu2">{{foodOrder.amount}}</p>
+            </span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+<!-- <div *ngFor="let order of this.orders">
   <mat-card class="order_card">
     <div class="order_info">
       <span>Order: {{order.orderID}}</span>
@@ -16,4 +88,4 @@
       <button class="bt-order" mat-raised-button color="warn"><span style="font-size: 15px;">{{order.status}}</span></button>
     </div>
   </mat-card>
-</div>
+</div> -->
