--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -79,6 +79,7 @@
             color="accent"
             class="font-menu2"
             style="width: 100%"
+            (click)="addToCart(this.foods.fid)"
           >
             เพิ่มลงในตะกร้า
           </button>
