--- a/src/app/page/main/main.component.scss
+++ b/src/app/page/main/main.component.scss
@@ -8,10 +8,16 @@
   background-color: rgb(249, 181, 55);
 }
 
+.img-trolley{
+  width: 20px;
+  height: 20px;
+}
+
 .fxLayout{
   display: flex;
   position: relative;
 }
+
 
 .font-logo{
   margin-left: 10px;
