--- a/src/app/page/order/order.component.html
+++ b/src/app/page/order/order.component.html
@@ -68,7 +68,7 @@
           </div>
           <div class="col-2">
             <span>
-              <p class="font-menu2">ราคารวม</p>
+              <p class="font-menu2">{{foodOrder.sumPrice}}</p>
             </span>
           </div>
         </div>
