--- a/src/app/page/order/order.component.html
+++ b/src/app/page/order/order.component.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <span>
-          <p class="font-menu2">รวมทั้งสิ้น  บาท</p>
+          <p class="font-menu2">รวมทั้งสิ้น {{this.Total}} บาท</p>
         </span>
       </div>
 
