--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-6">
+    <div class="col-12">
       <div style="display: flex; flex-direction: row; justify-content: center">
         <img
           class="img-cover"
@@ -8,18 +8,46 @@
         />
         <span class="font-cover">ตามสั่งตามใจ</span>
       </div>
-      <div class="col-12" style="margin: 20px">
+    </div>
+    <div style="display: flex; flex-direction: row; justify-content: center;margin: 1px;">
+      <div class="col-6" style="margin: 20px">
         <mat-toolbar
-          style="display: flex; flex-direction: row; justify-content: start;background-color: white;margin-left: 20px;"
+          style="
+            display: flex;
+            flex-direction: row;
+            justify-content: start;
+            background-color: white;
+            margin-left: 20px;
+          "
+        >
+          <span class="font-menu2" style="margin-left: 15px"
+            >เลือกประเภทอาหาร :
+          </span>
+          <button
+            mat-button
+            color="warn"
+            class="font-menu2"
+            *ngFor="let type of this.foodtypes"
+            (click)="SearchType(type.tid)"
           >
-          <span class="font-menu2" style="margin-left: 15px;">เลือกประเภทอาหาร : </span>
-          <button mat-button color="warn" class="font-menu2" *ngFor="let type of this.foodtypes" (click)="SearchType(type.tid)">
             {{ this.type.name }}
           </button>
-          <button mat-button color="warn" class="font-menu2" style="margin-left: 10px;" (click)="TypeAll()">แสดงเมนูทั้งหมด</button>
-          <button mat-button><img class="img-trolley"  src="https://cdn-icons-png.flaticon.com/512/2838/2838895.png" ></button>
-          </mat-toolbar
-        >
+          <button
+            mat-button
+            color="warn"
+            class="font-menu2"
+            style="margin-left: 10px"
+            (click)="TypeAll()"
+          >
+            แสดงเมนูทั้งหมด
+          </button>
+          <button mat-button>
+            <img
+              class="img-trolley"
+              src="https://cdn-icons-png.flaticon.com/512/2838/2838895.png"
+            />
+          </button>
+        </mat-toolbar>
         <!-- *ngIf="this.isMultiple == 'show-one'" -->
         <button
           mat-button
@@ -37,55 +65,58 @@
           }}</span>
         </button>
       </div>
-    </div>
 
-    <!-- Shiba -->
-    <div class="col-6" style="margin-top: 10px">
-      <div style="display: flex; flex-direction: row; justify-content: center">
-        <div *ngIf="SelectFood != undefined">
-          <img class="img-show" src="{{ this.SelectFood.img }}" />
-          <span
-            ><h1 class="font-menu2">{{ this.SelectFood.name }}</h1></span
-          >
-          <span
-            ><p class="font-menu2">
-              รายละเอียด :{{ this.SelectFood.detail }}
-            </p></span
-          >
-          <span
-            ><p class="font-menu2">
-              ราคา {{ this.SelectFood.price }} บาท
-            </p></span
-          >
-          <span
-            style="
-              display: flex;
-              justify-content: center;
-              font-size: 50px;
-              margin-top: 20px;
-            "
-            >{{ this.count }}</span
-          >
-          <span
-            #num
-            style="
-              display: flex;
-              justify-content: space-around;
-              font-size: 30px;
-              margin-bottom: 10px;
-            "
-            ><button mat-button color="warn" (click)="delete()">-</button>
-            <button mat-button color="primary" (click)="plus()">+</button>
-          </span>
-          <button
-            mat-raised-button
-            color="accent"
-            class="font-menu2"
-            style="width: 100%"
-            (click)="addToCart(this.SelectFood.fid)"
-          >
-            เพิ่มลงในตะกร้า
-          </button>
+      <!-- Shiba -->
+
+      <div class="col-5" style="margin-top: 85px">
+        <div
+          style="display: flex; flex-direction: row; justify-content: center"
+        >
+          <div *ngIf="SelectFood != undefined">
+            <img class="img-show" src="{{ this.SelectFood.img }}" />
+            <span
+              ><h1 class="font-menu2">{{ this.SelectFood.name }}</h1></span
+            >
+            <span
+              ><p class="font-menu2">
+                รายละเอียด :{{ this.SelectFood.detail }}
+              </p></span
+            >
+            <span
+              ><p class="font-menu2">
+                ราคา {{ this.SelectFood.price }} บาท
+              </p></span
+            >
+            <span
+              style="
+                display: flex;
+                justify-content: center;
+                font-size: 50px;
+                margin-top: 20px;
+              "
+              >{{ this.count }}</span
+            >
+            <span
+              #num
+              style="
+                display: flex;
+                justify-content: space-around;
+                font-size: 30px;
+                margin-bottom: 10px;
+              "
+              ><button mat-button color="warn" (click)="delete()">-</button>
+              <button mat-button color="primary" (click)="plus()">+</button>
+            </span>
+            <button
+              mat-raised-button
+              color="accent"
+              class="font-menu2"
+              style="width: 100%"
+              (click)="addToCart(this.SelectFood.fid)"
+            >
+              เพิ่มลงในตะกร้า
+            </button>
+          </div>
         </div>
       </div>
     </div>
