--- a/src/app/page/main/main.component.scss
+++ b/src/app/page/main/main.component.scss
@@ -48,9 +48,8 @@
 
 .img-cover{
   margin-top: 10px;
-  width: max-content;
-  height: 15%;
-  border-radius: 10px;
+  width: 1500px;
+  height: 400px;
   filter: brightness(0.5);
 }
 
@@ -83,6 +82,7 @@
 .img-show{
   width: 500px;
   height: 400px;
+  position: sticky;
   border-radius: 10px;
 }
 
