--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -8,7 +8,7 @@
   <span class="space"></span>
   <div class="font-menu">
     <button mat-button routerLink="/order">เจ้าของ</button>
-    <button mat-button routerLink="/main" >หน้าแรก</button>
+    <button mat-button routerLink="/main" >ลูกค้า</button>
     <button mat-button>ติดต่อ</button>
   </div>
 </mat-toolbar>
