--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,18 +1,17 @@
 <div class="center">
-  
+
   <h1>Login</h1>
-  <form method="post">
+  <form>
     <div class="txt_field">
-      <input type="text" required />
+      <input type="text" name="username" #username>
       <span></span>
       <label>Username</label>
     </div>
     <div class="txt_field">
-      <input type="password" required />
+      <input type="password" name="password" #password>
       <span></span>
       <label>Password</label>
     </div>
-    <input type="submit" value="Login" />
-    <div class="signup_link">Not a member? <a href="#">Signup</a></div>
+    <button mat-raised-button (click)="login(username.value , password.value)">Login</button>
   </form>
 </div>
