--- a/src/app/page/main/main.component.scss
+++ b/src/app/page/main/main.component.scss
@@ -47,10 +47,10 @@
 }
 
 .img-cover{
-  margin-top: 10px;
-  width: 1500px;
+  width: 100%;
   height: 400px;
   filter: brightness(0.5);
+  object-fit: cover;
 }
 
 .font-cover{
@@ -67,11 +67,13 @@
   height: 150px;
   border-radius: 10px;
   transition: 1s ease;
+  object-fit: cover;
 }
 
 .img-menu:hover{
   transform: scale(1.1);
   transition: 1s ease;
+
 }
 
 .button-size{
