--- a/src/app/page/order/order.component.html
+++ b/src/app/page/order/order.component.html
@@ -35,7 +35,7 @@
           </div>
         </div>
       </mat-card>
-      <span><button mat-button color="warn" routerLink="/main">กลับ</button></span>
+      <span><button mat-button color="warn" routerLink="/loginOwner">กลับ</button></span>
     </div>
 
     <div class="col-1"></div>
