--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -7,8 +7,8 @@
   <span class="font-logo">ตามสั่งตามใจ</span>
   <span class="space"></span>
   <div class="font-menu">
-    <button mat-button routerLink="/first">หน้าแรก</button>
-    <button mat-button routerLink="/loginOwner">เจ้าของร้าน</button>
-    <button mat-button routerLink="/loginCus" >ลูกค้า</button>
+    <button mat-button routerLink="/order">เจ้าของ</button>
+    <button mat-button routerLink="/main" >ลูกค้า</button>
+    <button mat-button>ติดต่อ</button>
   </div>
 </mat-toolbar>
