--- a/src/app/page/basket/basket.component.html
+++ b/src/app/page/basket/basket.component.html
@@ -1,23 +1,25 @@
 <div class="container" style="margin-left:50px; font-family: 'Mitr', sans-serif;">
   <div class="row" >
     <div class="col-12">
-
       <mat-card style="margin-top: 20px; background-color:rgb(249, 181, 55) ;">
         <div class="row" style="margin-top: 5px;margin-bottom: 5px;">
           <div class="col-1" style="text-align: center;">
-            <span>ลำดับ</span>
+            <span >ลำดับ</span>
           </div>
-          <div class="col-3">
+          <div class="col-3"style="text-align: center;">
             <span>ชื่ออาหาร</span>
           </div>
-          <div class="col-2">
+          <div class="col-2"style="text-align: center;">
             <span>ราคา</span>
           </div>
-          <div class="col-1">
+          <div class="col-1"style="text-align: center;">
             <span>จำนวน</span>
           </div>
-          <div class="col-5">
+          <div class="col-3"style="text-align: center;">
             <span>สถานะ</span>
+          </div>
+          <div class="col-1"style="text-align: center;">
+            <span>ราคา</span>
           </div>
         </div>
       </mat-card>
@@ -27,28 +29,29 @@
           <div class="col-1" style="text-align: center;">
             <span>{{i+1}}</span>
           </div>
-          <div class="col-3">
+          <div class="col-3"style="text-align: center;">
             <span>{{item.name}}</span>
           </div>
-          <div class="col-2">
+          <div class="col-2"style="text-align: center;">
             <span>{{item.price}}</span>
           </div>
-          <div class="col-1">
-            {{this.count}}
+          <div class="col-1"style="text-align: center;">
+            <span>{{item.amount}}</span>
           </div>
-          <div class="col-3">
+          <div class="col-3"style="text-align: center;">
             <span>ยังไม่ส่ง</span>
           </div>
-          <div class="col-1">
-            <span>แก้ไข</span>
+          <div class="col-1" style="text-align: center;">
+            <span>{{item.amount * item.price}}</span>
           </div>
-          <div class="col-1">
-            <button mat-button color="warn" (click)="removeItem(item)">ลบ</button>
+          <div class="col-1"style="justify-content:center">
+            <button mat-button color="warn" (click)="removeItem(item)" style="margin-top: -5px;">ลบ</button>
           </div>
         </div>
       </mat-card>
     </div>
-    <mat-card style="margin-top: 10px;display: flex;justify-content: row;">
-    <span><button mat-button color="warn" routerLink="/main">กลับ</button><span style="float: right;">{{this.getTotal * this.count}} บาท</span></span>
-    </mat-card>
+    <span><button mat-button color="warn" routerLink="/main">กลับ</button></span>
+    <span style="float: right;">รวมทั้งหมด {{this.price}} บาท</span>
+
+
 
