--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -49,7 +49,7 @@
             แสดงเมนูทั้งหมด
           </button>
 
-          <button style="margin-left: 10px;" routerLink="/basket" class="btn btn-basic">
+          <button style="margin-left: 10px;" routerLink="/basket2" class="btn btn-basic">
             <i style="font-size: 30px" class="fas fa-cart-plus">
               <img
               class="img-trolley"
