--- a/src/app/page/basket2/basket2.component.html
+++ b/src/app/page/basket2/basket2.component.html
@@ -45,7 +45,7 @@
             <span>{{foodOrder.sumPrice}}</span>
           </div>
           <div class="col-1"style="justify-content:center">
-            <button mat-button color="warn" style="margin-top: -5px;" (click)="del(foodOrder.oid, foodOrder.fid)">ลบ</button>
+            <button mat-button color="warn" style="margin-top: -5px;" (click)="del(foodOrder.oid, foodOrder.fid)" routerLink="/basket2">ลบ</button>
           </div>
         </div>
       </mat-card>
