--- a/src/app/page/basket2/basket2.component.html
+++ b/src/app/page/basket2/basket2.component.html
@@ -1,7 +1,9 @@
 <div class="container" style="margin-left:50px; font-family: 'Mitr', sans-serif;">
+  <div style="float: right;">เงินในบัญชี: {{this.money}} บาท</div>
+  <div style="margin-top: 50px;">รายการที่ค้างชำระสินค้า</div>
   <div class="row" >
     <div class="col-12">
-      <mat-card style="margin-top: 20px; background-color:rgb(249, 181, 55) ;">
+      <mat-card style="margin-top: 10px; background-color:rgb(249, 181, 55) ;">
         <div class="row" style="margin-top: 5px;margin-bottom: 5px;">
           <div class="col-1" style="text-align: center;">
             <span >ลำดับ</span>
@@ -12,18 +14,15 @@
           <div class="col-2"style="text-align: center;">
             <span>ราคา</span>
           </div>
-          <div class="col-1"style="text-align: center;">
+          <div class="col-4"style="text-align: center;">
             <span>จำนวน</span>
-          </div>
-          <div class="col-3"style="text-align: center;">
-            <span>แก้ไข</span>
           </div>
           <div class="col-1"style="text-align: center;">
             <span>ราคา</span>
           </div>
         </div>
       </mat-card>
-      <div >
+
       <mat-card style="margin-top: 10px;" *ngFor="let foodOrder of this.foodOrders;let i = index">
         <div class="row" style="margin-top: 10px;margin-bottom: 10px;">
           <div class="col-1" style="text-align: center;">
@@ -35,11 +34,25 @@
           <div class="col-2"style="text-align: center;">
             <span>{{foodOrder.price}}</span>
           </div>
-          <div class="col-1"style="text-align: center;">
-            <span>{{foodOrder.amount}}</span>
-          </div>
-          <div class="col-3"style="text-align: center;">
-            <span></span>
+          <div class="col-4" style="text-align: center">
+            <span
+              ><button
+                mat-button
+                color="warn"
+                style="font-size: 20px"
+                (click)="minusAmount(foodOrder.oid, foodOrder.fid)"
+              >
+                -</button
+              >{{ foodOrder.amount
+              }}<button
+                mat-button
+                color="primary"
+                style="font-size: 20px"
+                (click)="plusAmount(foodOrder.oid, foodOrder.fid)"
+              >
+                +
+              </button></span
+            >
           </div>
           <div class="col-1" style="text-align: center;">
             <span>{{foodOrder.sumPrice}}</span>
@@ -49,9 +62,60 @@
           </div>
         </div>
       </mat-card>
+
+      <span style="float: right;">รวมทั้งหมด {{this.total}} บาท</span>
     </div>
-    <span><button mat-button color="warn" routerLink="/main">กลับ</button></span>
-    <span style="float: right;">รวมทั้งหมด {{this.total}} บาท</span>
+  </div>
+
+  <button mat-raised-button color="primary" style="float: right;" (click)="payUpdate(this.oid)">ชำระเงิน</button>
+  <!-- order finished -->
+  <div style="margin-top: 50px;">รายการที่ชำระสินค้าสำเร็จ</div>
+  <div class="row">
+    <div class="col-12">
+      <mat-card style="margin-top: 10px; background-color:rgb(249, 181, 55) ;">
+        <div class="row" style="margin-top: 5px;margin-bottom: 5px;">
+          <div class="col-1" style="text-align: center;">
+            <span >ออเดอร์</span>
+          </div>
+          <div class="col-3"style="text-align: center;">
+            <span>วันที่สั่งสินค้า</span>
+          </div>
+          <div class="col-3"style="text-align: center;">
+            <span>วันที่จัดส่งสำเร็จ</span>
+          </div>
+          <div class="col-3"style="text-align: center;">
+            <span>สถานะ</span>
+          </div>
+          <div class="col-2"style="text-align: center;">
+            <span>รายละเอียด</span>
+          </div>
+        </div>
+      </mat-card>
+
+      <mat-card style="margin-top: 10px;" *ngFor="let order of this.finish_orders">
+        <div class="row" style="margin-top: 5px;margin-bottom: 5px;">
+          <div class="col-1" style="text-align: center;">
+            <span>{{order.oid}}</span>
+          </div>
+          <div class="col-3"style="text-align: center;">
+            <span>{{order.fdate}}</span>
+          </div>
+          <div class="col-3"style="text-align: center;">
+            <span>{{order.odate}}</span>
+          </div>
+          <div class="col-3"style="text-align: center;">
+            <span>{{order.status}}</span>
+          </div>
+          <div class="col-2"style="text-align: center;">
+            <button mat-button color="warn" style="margin-top: -5px;" routerLink="/bill" (click)="saveOidToDataService(order.oid)">ข้อมูล</button>
+          </div>
+        </div>
+      </mat-card>
+      <span><button mat-button color="warn" routerLink="/main">กลับ</button></span>
+    </div>
+  </div>
+
+</div>
 
 
 
