--- a/src/app/page/bill/bill.component.scss
+++ b/src/app/page/bill/bill.component.scss
@@ -29,7 +29,7 @@
 }
 
 .img-cover{
-  margin-top: 10px;
+
   width: 100%;
   height: 150px;
   object-fit: cover;
@@ -39,9 +39,15 @@
 
 .font-cover{
   position: absolute;
-  top: 15%;
+  top: 6%;
   color: rgb(249, 181, 55) ;
   font-family: 'Pattaya', sans-serif;
   font-size: 50px;
 
+}
+
+.cardBill{
+  width: 800px;
+  margin-top: 50px;
+  border-radius: 10px;
 }
